--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "cron": "^2.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "helmet": "^6.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.11.2",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
